# tugma-ai

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  fly.toml  pyproject.toml  supervisord.conf
.chainlit/: config.toml
docs/adr/: 001-project-foundation.md  002-state-and-communication.md  003-retrieval-and-infrastructure.md
frontend/: app.py  chainlit.md
frontend/public/elements/: ElectiveCard.jsx
ingestion/: chunker.py  ingest.py
src/: config.py  main.py
src/agents/: __init__.py  main_agent.py  tools.py
src/agents/prompts/: intake.md  matcher.md  retriever.md  translator.md
src/agents/subagents/: matching.py  retrieval.py  translation.py
src/core/: embeddings.py  guardrails.py  llm.py  qdrant.py  redis.py  reranker.py
src/models/: profile.py  recommendations.py
src/observability/: langfuse.py
tests/: conftest.py  test_agent.py  test_guardrails.py  test_models.py  test_scoring.py  test_tools.py
